# NOC_Toolkit

./: .env.example  .gitignore  BULK_SSH_IMPLEMENTATION.md  CHANGELOG.md  Dockerfile  GRAPH_DIAGNOSTICS.md  NETWORK_ENGINEER_GUIDE.md  QUICK_START.md  README.md  SECURITY_AND_IMPROVEMENTS.md  TOPOLOGY_GRAPH_UPDATE.md  TROUBLESHOOTING_GRAPH.md  UI_UPGRADES.md  app.py  docker-compose.yml  docker-entrypoint.sh  prd.json  progress.txt  pyproject.toml  pytest.ini  requirements.txt  wsgi.py
docs/: CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  audit-findings.md  production-runbook.md
migrations/: README  alembic.ini  env.py
noc-toolkit-prod/: .dockerignore  .env.example  Dockerfile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  nginx-noc-toolkit.conf  noc-prod.service  requirements.txt  setup.sh
ralph/: prd.json  progress.txt  ralph.sh
requirements/: base.txt  dev.txt  prod.txt
scripts/: init_db.py
src/: app.py  config.py
tasks/: prd-noc-toolkit-production-readiness.md  prd-production-readiness.md  prd-ui-consistency-redesign.md
templates/: action_preview.html  action_preview_global.html  admin_page_settings.html  admin_settings.html  admin_users.html  ap_inventory.html  base.html  bulk_ssh.html  bulk_ssh_results.html  bulk_ssh_schedules.html  cert_chain.html  cert_edit.html  cert_tracker.html  cert_upload.html  changes.html  device_inventory.html  error.html  global_config.html  global_config_results.html  index.html  ise_nodes.html  job_progress.html  jobs_center.html  knowledge_base.html  knowledge_base_form.html  login.html  phrase_search.html  results.html  solarwinds_inventory.html  solarwinds_nodes.html  topology_builder.html  topology_graph.html  topology_tool.html  wlc_clients_troubleshoot.html  wlc_clients_troubleshoot_job.html  wlc_clients_troubleshoot_jobs.html  wlc_dashboard.html  wlc_dashboard_settings.html  wlc_inventory.html  wlc_results.html  (+5 more)
tests/: __init__.py  conftest.py  seed_test_data.py
tools/: __init__.py  aruba_controller.py  bulk_ssh.py  cert_tracker.py  db_jobs.py  netmiko_helpers.py  (+10 more)
(+128 files in other folders)
